--- a/assign/index.html
+++ b/assign/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
 </head>
 <body>
      <!-- header section start -->
@@ -33,7 +35,7 @@
         <div class="container11">
           <div class="card">
                 <h2>Bent u onze <br>nieuwe partner?</h2>
-                <p>Lorem ipsum dolor sit a met, consectetur adipiscing elit. Nam consequat arcu sed nulla lacinia, quis blandit eros facilisis.mauris mattis nescem nec finibu. nunc eget leo ut diam imprediet vehicula ac non elit.Pellentesque nisi neque, sodales nec sem et, condimentum congue ligula. integer non ullamcorper lacus , sed luctus sapien.</p>
+                <p style="font-size: 14px;">Lorem ipsum dolor sit a met, consectetur adipiscing elit. Nam consequat arcu sed nulla lacinia, quis blandit eros facilisis.mauris mattis nescem nec finibu. nunc eget leo ut diam imprediet vehicula ac non elit.Pellentesque nisi neque, sodales nec sem et, condimentum congue ligula. integer non ullamcorper lacus , sed luctus sapien.</p>
                 <select >
                     <option value="volvo"><p>De mogelijkheden</p></option>
                 </select>
@@ -43,27 +45,28 @@
     </div>
     <div class="body">
     <div class="container2">
+        
         <div class="container21">
             <div class="card11">
                 <img src="range.png" alt="Avatar" class="center">
                 <div class="container">
-                  <h2 style="text-align: center; font-size: 20px; ">Groot bereik</h2>
-                  <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
+                  <h2 style="text-align: center; font-size: 17px; ">Groot bereik</h2>
+                  <p >Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
                   <div class="button-border"></div>
                 </div>
             </div>
             <div class="card12">
                 <img src="freeSignup.png" alt="Avatar" class="center">
                 <div class="container">
-                  <h2 style="text-align: center; font-size: 18px;">Gratis aanmelden</h2>
-                  <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
+                  <h2 style="text-align: center; font-size: 17px;">Gratis aanmelden</h2>
+                  <p >Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
                 </div>
             </div>
             <div class="card13">
                 <img src="service.png" alt="Avatar" class="center">
                 <div class="container">
-                  <h2 style="text-align: center; font-size: 18px;"><b>Klantenservice</b></h2>
-                  <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
+                  <h2 style="text-align: center; font-size: 17px;"><b>Klantenservice</b></h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
                 </div>
             </div>
         </div>
@@ -71,24 +74,24 @@
             <div class="card11">
                 <img src="support.png" alt="Avatar" class="center">
                 <div class="container">
-                  <h2 style="text-align: center;font-size: 18px;">Support en inzage</h2>
-                  <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
+                  <h2 style="text-align: center;font-size: 17px;">Support en inzage</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
                   <div class="button-border"></div>
                 </div>
             </div>
             <div class="card12">
                 <img src="money.png" alt="Avatar" class="center">
                 <div class="container">
-                  <h2 style="text-align: center;font-size: 18px;">Verdian geld</h2>
-                  <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
+                  <h2 style="text-align: center;font-size: 17px;">Verdian geld</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
                   <div class="button-border"></div>
                 </div>
             </div>
             <div class="card13">
                 <img src="quality.png" alt="Avatar" class="center">
                 <div class="container">
-                  <h2 style="text-align: center; font-size: 18px;"><b>Kwalitatief</b></h2>
-                  <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
+                  <h2 style="text-align: center; font-size: 17px;"><b>Kwalitatief</b></h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
                   <div class="button-border"></div>
                 </div>
             </div>
@@ -97,28 +100,28 @@
             <div class="card31">
                 <img src="wrench.png" alt="Avatar" class="center">
                 <div class="container">
-                  <h2 style="text-align: center;font-size: 18px;">Maatweak oplossingen</h2>
-                  <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
+                  <h2 style="text-align: center;font-size: 17px;">Maatweak oplossingen</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
                   <div class="button-border"></div>
                 </div>
             </div>
             <div class="card32">
                 <img src="thumbs.png" alt="Avatar" class="center">
                 <div class="container">
-                  <h2 style="text-align: center; font-size: 18px;">Gemak</h2>
-                  <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
+                  <h2 style="text-align: center; font-size: 17px;">Gemak</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adip iscing elit.Nam consequat arcu sed nullalacinia,quis blandit eros facil.</p>
                 </div>
             </div>
         </div>
     </div>
     </div> 
-    <div class="footer">
+     <div class="footer">
         <div class="footerParent">
            <div class="container3">
               <p class="p1"><i class="fa fa-copyright"></i> 2013-2019 Vilegenenparkeren.nl -Alle rechten voorbehouden</p>
-              <p class="p1">Bedrijfsgegevens/Privacy Policy /Algemene voorwaarden / Sitemap</p>
+              <p class="p2">Bedrijfsgegevens/Privacy Policy /Algemene voorwaarden / Sitemap</ps>
            </div>
         </div>
-    </div>  
+    </div>   
 </body> 
 </html>
