--- a/flex-box/index.html
+++ b/flex-box/index.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>   
-  <div><a href="./assign/index.html">Assign</a> </div>
+<body>
+    <h3>Flexbox</h3>
+    <a href="./Assign-1/index.html">assign-1</a><br/>
+    <a href="./Assign-2/index.html">assign-2</a><br/>
+    <a href="./Assign-3/index.html">assign-3</a>
+    <a href="./Assign-4/index.html">assign-4</a>
 </body>
 </html>
